all api of job service are working fine