@@ -1,9 +1,10 @@
 package com.rojgar.security;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.web.filter.OncePerRequestFilter;
@@ -40,11 +41,16 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter{
 			if(jwtUtil.isTokenValid(token)) {
 				String username = jwtUtil.extractUsername(token);
 				
+				String role = jwtUtil.extractRole(token);
+
+				SimpleGrantedAuthority authority =
+				        new SimpleGrantedAuthority("ROLE_" + role);
+				
 				UsernamePasswordAuthenticationToken authentication = 
 						new UsernamePasswordAuthenticationToken(
 								username, 
 								null, 
-								Collections.emptyList()
+								List.of(authority)
 						);
 				
 				authentication.setDetails(
